<resources>
    <string name="app_name">To-Do-List</string>
    <string name="on.time">on.time</string>
    <string name="notification">Notification</string>
    <string name="more">more</string>
    <string name="back">back</string>
    <string name="insert_note">insert note</string>
    <string name="text_Welcome">Make yourself\nmore on time</string>
    <string name="start">Start</string>
    <string name="schedule">Schedule</string>
    <string name="note">Note</string>
    <string name="search">Search Note</string>
    <string name="note_content">this morning\'s meeting, we have to improve the quality of office facilities and another...</string>
    <string name="note_date">31/07/2004</string>
    <string name="desc_push_pin">this is button push pin</string>
    <string name="max_Date">01/01/2999</string>
    <string name="min_Date">01/01/2000</string>
    <string name="btn_float">This is float button</string>
    <string name="btn_float1">This is float button note</string>
    <string name="btn_float2">This is float button schedule</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_make_note_activity">This is make note activity</string>

    <string name="full_day">Full day</string>
    <string name="start_from">Start from</string>
    <string name="finish">Finish</string>
    <string name="repeat">Repeat</string>
    <string name="reminder">Reminder</string>
    <string name="hint_title">Title</string>
    <string name="hint_place">Place</string>
    <string name="hint_note">Notes</string>
    
    <string name="hint_startForm">Mon, 20 Sep 2024 10:00 AM</string>
    <string name="hint_finish">Mon, 20 Sep 2024 10:00 AM</string>
    <string name="hint_repeat">One time</string>
    <string name="hint_reminder">Before 5 minutes</string>
    <string name="desc_pickDateStart">This is the button to select the note start date</string>
    <string name="desc_pickDateFinish">This is the button to select the note finish date</string>
    <string name="desc_repeat">This is the button to select the number of repetitions</string>
    <string name="desc_reminder">This is the button to select the repeat time</string>

    <string name="desc_pin">Pin this note</string>
    <string name="desc_writeNote">What to do list?</string>
    <string name="desc_insertNote">write note</string>

    <string name="desc_schedule">You Didn\'t Have Any Schedule</string>

    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="notes">Notes</string>

<!--    content dialog-->
    <string name="confirm">Confirm</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_confirm">Do you want to exit?</string>
    <string name="dialog_save">Do you want to save?</string>
    <string name="dialog_warning">Are you done yet?</string>
</resources>