<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_more_options"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".controller.InsertScheduleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_bg"
            android:contentDescription="@string/back"
            android:padding="14sp"
            android:src="@drawable/img_btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_insertSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_bg"
            android:contentDescription="@string/insert_note"
            android:padding="14sp"
            android:src="@drawable/img_btn_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/textStyleNewSchedule"
        android:text="@string/schedule" />

    <EditText
        android:id="@+id/edt_title"
        style="@style/tableRowStyle"
        android:background="@drawable/bg_edt"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:textColorHint="@color/hint"
        android:textSize="18sp"
        tools:ignore="Autofill,RtlSymmetry" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/textStyleNewSchedule"
                android:layout_span="2"
                android:layout_weight="1"
                android:text="@string/full_day" />

            <Switch
                android:id="@+id/swt_fullday"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginEnd="12dp"
                android:thumbTint="@color/white"
                android:trackTint="@color/purple_search"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                style="@style/textStyleNewSchedule"
                android:layout_weight="1"
                android:text="@string/start_from" />

            <TextView
                android:id="@+id/txt_start"
                style="@style/datePicker"
                android:text="@string/hint_startForm" />

            <ImageButton
                android:id="@+id/btn_pickDateStart"
                style="@style/btn_datePicker"
                android:background="@drawable/empty_bg"
                android:contentDescription="@string/desc_pickDateStart"
                android:src="@drawable/img_btn_pickdate"
                tools:ignore="ContentDescription" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                style="@style/textStyleNewSchedule"
                android:layout_weight="1"
                android:text="@string/finish" />

            <TextView
                android:id="@+id/txt_finish"
                style="@style/datePicker"
                android:text="@string/hint_finish" />

            <ImageButton
                android:id="@+id/btn_pickDateFinish"
                style="@style/btn_datePicker"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/empty_bg"
                android:contentDescription="@string/desc_pickDateFinish"
                android:src="@drawable/img_btn_pickdate"
                tools:ignore="ContentDescription" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                style="@style/textStyleNewSchedule"
                android:layout_weight="1"
                android:text="@string/repeat" />

<!--            <TextView-->
<!--                android:id="@+id/txt_repeat"-->
<!--                style="@style/datePicker"-->
<!--                android:text="@string/hint_repeat" />-->

            <Spinner
                android:id="@+id/sp_repeat"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                style="@style/textStyleNewSchedule"
                android:layout_weight="1"
                android:text="@string/reminder" />

<!--            <TextView-->
<!--                android:id="@+id/txt_reminder"-->
<!--                style="@style/datePicker"-->
<!--                android:text="@string/reminder" />-->

            <Spinner
                android:id="@+id/sp_remind"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/edt_place"
        style="@style/tableRowStyle"
        android:background="@drawable/bg_edt"
        android:ems="10"
        android:hint="@string/hint_place"
        android:inputType="text"
        android:textColorHint="@color/hint"
        android:textSize="18sp"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/edt_notes"
        style="@style/tableRowStyle"
        android:layout_marginTop="14sp"
        android:background="@drawable/bg_edt"
        android:ems="10"
        android:hint="@string/hint_note"
        android:inputType="text"
        android:textColorHint="@color/hint"
        android:textSize="18sp"
        tools:ignore="Autofill,RtlSymmetry" />

</LinearLayout>