<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_insert_note"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".controller.InsertNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_bg"
            android:contentDescription="@string/back"
            android:padding="14sp"
            android:src="@drawable/img_btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_bg"
            android:contentDescription="@string/desc_pin"
            android:padding="14sp"
            android:src="@drawable/img_btn_push_pin"
            app:layout_constraintBottom_toBottomOf="@+id/btn_insertNote"
            app:layout_constraintEnd_toStartOf="@+id/btn_insertNote"
            app:layout_constraintTop_toTopOf="@+id/btn_insertNote" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_insertNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/empty_bg"
            android:contentDescription="@string/insert_note"
            android:padding="14sp"
            android:src="@drawable/img_btn_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="14sp"
        android:layout_marginEnd="14sp"
        android:background="@null"
        android:hint="@string/hint_title"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_light"
        android:textCursorDrawable="@drawable/bg_cursor_custom"
        android:textSize="18sp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/edt_insertNote_Content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|top"
        android:hint="@string/desc_writeNote"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_light"
        android:textCursorDrawable="@drawable/bg_cursor_custom"
        tools:ignore="Autofill" />
</LinearLayout>