<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10sp"
    android:background="@drawable/bg_note_content"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/txt_note"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="5sp"
        android:lineSpacingExtra="2sp"
        android:text="@string/note_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/note_date"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_note" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_pushpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5sp"
        android:background="@drawable/empty_bg"
        android:contentDescription="@string/desc_push_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_note"
        app:srcCompat="@drawable/img_btn_push_pin" />
</androidx.constraintlayout.widget.ConstraintLayout>