<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    tools:ignore="DisableBaselineAlignment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_day"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_noteschedule"
            android:contentDescription="@string/schedule"
            android:gravity="center"
            android:textColor="@color/white" />

        <View
            android:id="@+id/view2"
            android:layout_width="4dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/purple" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_note_content">

        <TextView
            android:id="@+id/txt_title_schedule"
            style="@style/item_schedule"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLength="20"
            android:maxLines="1"
            android:text="@string/hint_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chk_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/txt_title_schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_title_schedule" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="16dp"
            android:background="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            style="@style/item_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_schedule" />

        <TextView
            android:id="@+id/txt_time"
            style="@style/item_schedule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:text="@string/time"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_schedule"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView11"
            style="@style/item_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/txt_place"
            style="@style/item_schedule2"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/place"
            app:layout_constraintStart_toStartOf="@+id/txt_time"
            app:layout_constraintTop_toBottomOf="@+id/txt_time"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView13"
            style="@style/item_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/txt_note"
            style="@style/item_schedule2"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/notes"
            app:layout_constraintStart_toStartOf="@+id/txt_place"
            app:layout_constraintTop_toBottomOf="@+id/txt_place"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>